--- a/style.css
+++ b/style.css
@@ -1,3 +1,48 @@
 h1, h2 {
   font-family: Lato;
 }
+
+:root {
+  --bgColor: #041F35;
+  --headerFontColor: #fff;
+  --mainFontColor: var(--bgColor, darkblue);
+  --rowColor: #777;
+  
+  --zg-caption-background: var(--bgColor, inherit);
+  --zg-caption-color: var(--headerFontColor, white);
+  --zing-grid-color: var(--mainFontColor);
+}
+ 
+html, body {
+	height:100%;
+	width:100%;
+	margin:0;
+	padding:0;
+}
+ 
+.button {
+  text-align: center;
+  background: #07C;
+  color: #FFF;
+  cursor: pointer;
+  border-radius: 3px;
+  font-size: 0.85rem;
+  padding: 5px 20px;
+  cursor: pointer;
+  margin: 15px 0 15px 15px;
+  position: relative;
+  top: 0;
+}
+ 
+.button:hover {
+	background: #1b6ead;
+}
+zing-grid[loading]{
+  min-height: 600px;
+}
+ 
+/* hide some inner grid elements */
+zing-grid[loading]  zg-pager {
+  visibility: hidden;
+}
+ 
